--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astro-community/astro-embed-youtube": "^0.5.10",
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.3.5",
     "@astrojs/rss": "^4.0.12",
@@ -18,6 +19,7 @@
     "@fontsource/geist-sans": "^5.2.5",
     "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.13.9",
+    "astro-embed": "^0.12.0",
     "astro-pagefind": "^1.8.5",
     "clsx": "^2.1.1",
     "katex": "^0.16.27",
