--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "@astro-community/astro-embed-youtube": "^0.5.10",
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.3.5",
+    "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.6.0",
     "@fontsource/geist-mono": "^5.2.7",
     "@fontsource/geist-sans": "^5.2.5",
     "@tailwindcss/vite": "^4.1.13",
+    "@types/react": "^19.2.9",
+    "@types/react-dom": "^19.2.3",
     "astro": "^5.13.9",
     "astro-embed": "^0.12.0",
     "astro-pagefind": "^1.8.5",
     "clsx": "^2.1.1",
     "katex": "^0.16.27",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "rehype-katex": "^7.0.1",
     "rehype-mathjax": "^7.1.0",
     "remark-math": "^6.0.0",
