--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "astro": "^5.13.9",
     "astro-embed": "^0.12.0",
     "astro-pagefind": "^1.8.5",
+    "astronomy-engine": "^2.1.19",
     "clsx": "^2.1.1",
     "katex": "^0.16.27",
     "react": "^19.2.3",
